# robot_standing_in_line

./: CMakeLists.txt  README.md  attachArmadillo EndOfLIne.txt  attachArmadillo.txt  attachArmadilloUpgrade.txt  coffe_map.pgm  coffe_map.yaml  coffee_line.yaml  men_coffee_line.world  package.xml
launch/: demo.launch  full_pipeline_cafiteria.launch  main.launch  main_earthquake.launch  main_modelpush.launch  men_line.launch  move_person.launch  moving_coffee_line.launch  robot_standing_in_line.launch
maps/: men_line.pgm  men_line.yaml
src/: earthquake.cc  fused_line_tracker.py  laser_data_real.py  laser_line_tracker.py  laser_points_wall_detector.py  line_tracker.py  line_tracker_service.py  manager.py  move_cup.cc  move_person.cc  robot_standing_in_line.py  robot_standing_in_line_service.py  test_laser_line_tracker.py  test_laser_points_wall_detector.py  test_tracker_service.py  test_utils.py  tests  tests.py  tracker_service.py  utils.py  wall_detector.py
src/data_objects/: laser_data_dummy.py  laser_data_proxy.py
src/mocks/: __init__.py  speech_service_mock.py
src/plugins/: move_person.cc  move_person_2.cc
src/test/: __init__.py  detect_and_track.test  detect_and_track_pos2.test  end_to_end.test  line_end_detection.test  line_end_detection_w2_pos2.test  line_end_detection_world2.test  line_tracker.test  line_tracker_2.test  test_detect_and_track.py  test_end_to_end.py  test_laser_line_tracker.py  test_laser_points_wall_detector.py  test_line_end_detection.py  test_tracker_node.py  test_tracker_service.py  test_utils.py  tracker_node_test.py  trcaker_user_acceptance.py
src/trackers/: fused_line_tracker.py  image_line_tracker.py  laser_line_tracker.py  line_tracker.py
src/wall_detectors/: laser_points_wall_detector.py  wall_detector.py
test/: test_laser_line_tracker.py  test_laser_points_wall_detector.py  test_tracker_service.py  test_utils.py  tests.py
worlds/: coffee_struct_diff_line.world  men_coffee_line.world  men_line.world  men_line2.world  moving_coffee_line.world  moving_person.world  pick_coke.world
